# fsmpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: fsm.hpp
tests/: basic.cc  simple_context.cc  simplest.cc
